--- a/Stock Price Prediction.ipynb
+++ b/Stock Price Prediction.ipynb
@@ -908,13 +908,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SVM-LINEAR: 0.7712532865907099\n",
-      "SVM-RBF: 0.7721297107800176\n",
-      "Gaussian Process: 0.7721297107800176\n",
-      "Random Forest: 0.635407537248028\n",
-      "AdaBoost: 0.7598597721297108\n",
-      "Decision Tree: 0.7703768624014022\n",
-      "XGB: 0.7721297107800176\n"
+      "SVM-LINEAR: 0.7651183172655566\n",
+      "SVM-RBF: 0.7651183172655566\n",
+      "Gaussian Process: 0.7651183172655566\n",
+      "Random Forest: 0.6310254163014899\n",
+      "AdaBoost: 0.7519719544259421\n",
+      "Decision Tree: 0.761612620508326\n",
+      "XGB: 0.7633654688869412\n"
      ]
     }
    ],
@@ -943,22 +943,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "xgb_model = XGBClassifier(silent=False, \n",
+    "                      scale_pos_weight=1,\n",
+    "                      learning_rate=0.09,  \n",
+    "                      colsample_bytree = 0.4,\n",
+    "                      subsample = 0.8,\n",
+    "                      objective='binary:logistic', \n",
+    "                      n_estimators=1000, \n",
+    "                      reg_alpha = 0.3,\n",
+    "                      max_depth=5, \n",
+    "                      gamma=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.7721297107800176\n"
+      "CPU times: user 3.39 s, sys: 15.2 ms, total: 3.41 s\n",
+      "Wall time: 3.43 s\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "XGBClassifier(base_score=0.5, booster='gbtree', colsample_bylevel=1,\n",
+       "              colsample_bynode=1, colsample_bytree=0.4, gamma=10,\n",
+       "              learning_rate=0.09, max_delta_step=0, max_depth=5,\n",
+       "              min_child_weight=1, missing=None, n_estimators=1000, n_jobs=1,\n",
+       "              nthread=None, objective='binary:logistic', random_state=0,\n",
+       "              reg_alpha=0.3, reg_lambda=1, scale_pos_weight=1, seed=None,\n",
+       "              silent=False, subsample=0.8, verbosity=1)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "xgb_model = XGBClassifier()\n",
-    "xgb_model.fit(X_train, y_train)\n",
-    "acc = xgb_model.score(X_test, y_test)\n",
-    "print(f'Accuracy: {acc}')"
+    "eval_set = [(X_train, y_train), (X_test, y_test)]\n",
+    "eval_metric = ['auc', 'error']\n",
+    "\n",
+    "%time xgb_model.fit(X_train, y_train, eval_metric=eval_metric, eval_set=eval_set, verbose=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7651183172655566"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "xgb_model.score(X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " "
    ]
   },
   {
